--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -82,14 +82,35 @@ textarea {
 
 .signupdiv {
   z-index: 10;
-  width: 38vw;
-  height: 60vh;
-  position: relative;
-  top: 17vh;
+  // width: 38vw;
+  // height: 60vh;
+  // position: relative;
+  margin-top: 8%;
+  padding-bottom: 2%;
   left: 19vw;
   background-color: white;
   z-index: 1;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30)
 
+}
+
+#forward_back_btns{
+  text-align: center;
+
+}
+
+
+.logindiv {
+  z-index: 10;
+  // width: 38vw;
+  // height: 60vh;
+  // position: relative;
+  margin-top: 13%;
+  padding-bottom: 2%;
+  left: 19vw;
+  background-color: white;
+  z-index: 1;
+  box-shadow: 0 19px 38px rgba(0,0,0,0.30)
 }
 
 .overlay {
@@ -140,4 +161,13 @@ input.ui.standard.black.button {
 // }
 .private_key_wrapper {
   display: none;
+}
+//
+// .item.ui.inverted.button{
+//   margin-left: 10px;
+// }
+
+#signupbtn{
+  margin-right: 2em;
+
 }
