--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -17,13 +17,13 @@
 </div>
 
 <div class="signupdiv" id="sign_up1" style="display: none">
-  <div class="row">
-    <h2 class="ui teal">
-      Sign Up
-    </h2>
-  </div>
-    <!-- <div class="col-md-2">
-    </div> -->
+    <div class="col-md-6">
+      <div class="row">
+        <h2>
+          Sign Up
+        </h2>
+      </div>
+    </div>
     <%= bootstrap_form_for @business do |f| %>
     <div class="row">
 
@@ -57,10 +57,12 @@
           <%= f.telephone_field :phone_number, :maxlength => 10, :size => 15, placeholder: '(555)-523-5678' %>
           <%= f.password_field :password, placeholder: 'password'  %>
           <%= f.password_field :password_confirmation, placeholder: 'password confirmation'   %>
-          <%=  f.submit "list Business", class:'ui huge blue button'%>
+
           <div class="row" id="forward_back_btns">
+
               <div class="col-md-8 col-md-offset-2">
                 <div class='ui huge black button', id="backbtn2">Back <i class="fa fa-undo"></i></div>
+                <%=  f.submit "list Business", class:'ui huge blue button'%>
 
                 <!-- <div class='ui huge blue button', id="nextbtn3">Next <i class="fa fa-arrow-right"></i></div> -->
             </div>
@@ -69,7 +71,24 @@
       </div>
     </div>
     <% end %>
-
-
-
+</div>
+<div class="logindiv" id="login" style="display: none">
+  <div class="row">
+    <h2 class="ui teal">
+      Log In
+    </h2>
+  </div>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+    <%= bootstrap_form_for :login do |f| %>
+    <div class="ui form">
+      <%= f.text_field :email, placeholder: 'email@example.com' %>
+      <%= f.password_field :password, placeholder: 'password'  %>
+      <div class="row" id="forward_back_btns">
+          <%= f.submit 'Log In',class: 'ui huge blue button'%>
+      </div>
+    </div>
+    <% end %>
+  </div>
+</div>
 </div>
