--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -1,23 +1,22 @@
 <h1><%= current_business.name %> Wallet</h1>
 <% @wallets.each do |wallet| %>
-  <div class="wallet_info panel panel-body">
-    <div class="">
-      <p>Name: <%= wallet.name %></p>
-      <p>Balance: <%= wallet.balance %></p>
-      <div class="public_key_wrapper">
-        <input id="pub_ad" class="pub_ad" type="text" value='<%= wallet.wallet_address%>' style="display: none;" /><br />
-        <div id="pub_qrcode" class="pub-qrcode"></div>
-        <p>Wallet address: <%= wallet.wallet_address %></p>
+  <div class="wallet_info row">
+    <div class="public_key_wrapper col-sm-6 panel panel-body">
+      <input id="pub_ad" class="pub_ad" type="text" value='<%= wallet.wallet_address%>' style="display: none;" /><br />
+      <div id="pub_qrcode" class="pub-qrcode"></div>
+      <p><%= wallet.wallet_address %></p>
+      <% if wallet.name %>
+      <p><%= wallet.name %></p>
+      <% end %>
+      <p><%= wallet.balance %></p>
+      <div class="row">
+        <button class="private_key_button btn btn-primary">
+          toggle private key
+        </button>
+        <span><%= link_to 'Delete', wallet, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-danger" %></span>
       </div>
     </div>
-    <% if wallet.private_key %>
-    <button class="private_key_button">
-      toggle private key
-    </button>
-    <% else %>
-    <p>no private key given.</p>
-    <% end %>
-    <div class="private_key_wrapper">
+    <div class="private_key_wrapper col-sm-6 hide panel panel-body">
       <% if wallet.private_key %>
       <input id="priv_ad" class="priv_ad" type="text" value='<%= wallet.private_key%>' style="display: none;" />
       <div id="priv_qrcode" class="priv-qrcode"></div>
@@ -26,7 +25,6 @@
       </p>
       <% end %> <!-- end wallet.private_key if statement -->
     </div>
-    <p><%= link_to 'Delete', wallet, method: :delete, data: { confirm: 'Are you sure?' } %></p>
   </div>
 <% end %> <!-- end @wallets loop -->
 <%= link_to "Add existing", new_wallet_path %>
