--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -16,7 +16,7 @@
       <% else %>
       <div class="right item">
         <%#= link_to "Sign up", new_business_path, class: 'item, ui inverted button' %>
-        <button class='item ui inverted button', id="signupbtn">Sign up</button>
+        <button class='item ui inverted button', id="signupbtnm">Sign up</button>
         <!-- <button class="item ui inverted button rbtn" id="loginbtn">Sign Up</button> -->
         <!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp -->
         <%#= link_to "Log in", login_path, class: 'item, ui inverted button rbtn' %>
