adds cors and html5 validators

--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -71,12 +71,16 @@
     <% end %>
 </div>
 <div class="logindiv" id="login" style="display: none">
-  <div class="row">
-    <h2 class="ui teal">
-      Log In
-    </h2>
+  <div class="col-md-6">
+    <div class="row">
+      <h2>
+        Log In
+      </h2>
+    </div>
   </div>
+
   <div class="row">
+
     <div class="col-md-8 col-md-offset-2">
     <%= bootstrap_form_for :login do |f| %>
     <div class="ui form">
