--- a/app/views/layouts/_items_form.html.erb
+++ b/app/views/layouts/_items_form.html.erb
@@ -2,7 +2,7 @@
 <div class="ui form">
   <%= f.text_field :name, placeholder: 'Item Name' %>
   <%= f.text_field :price , placeholder: 'Price' %>
-  <%#= f.text_area :description,  cols: 40, rows: 4, placeholder: 'A brief description of the item'  %>
+  <%= f.text_area :description,  cols: 40, rows: 4, placeholder: 'A brief description of the item'  %>
   <%#= f.select(:description, options_for_select(wallets.each { |w| w.wallet_address })) %>
   <% wallets.each do |w| %>
   <%= f.label w.wallet_address %>
