--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,27 +1,32 @@
-<div class="ui four column doubling grid container">
+<div class="col-md-8 col-md-offset-1">
+  <div clas="row">
+  <h1><%= current_business.name %></h1>
+    <%= link_to "Edit Business Info", edit_business_path(current_business.id) %>
+  </div>
+  </div>
+<div class="col-md-8 col-md-offset-1">
+  <!-- <div id = "googleMap"></div> -->
+  <h1>What's for Sale</h1>
+  <% current_business.items.each do |item| %>
+  <div class="business-items">
+    <h3>
+       <%= item.name.capitalize %>
+    </h3>
+    <p>
+      Description: <%= item.description %>
+    </p>
+    <p>
+      Price: <%= number_to_currency(item.price) %>
+      wallet: <%= item.item_address%>
+    </p>
+    <p>
+      <%= link_to '<i class="fa fa-pencil"></i> Edit Item'.html_safe, edit_item_path(item.id), class: 'ui button' %>
+    </p>
+  </div>
 
-<h1><%= current_business.name %></h1>
-<div id = "googleMap"></div>
-<p>
-  <%= link_to "Edit Business", edit_business_path(current_business.id) %>
-</p>
-
-<% current_business.items.each do |item| %>
-<div class="business-items">
-  <p>
-    Item: <%= item.name.capitalize %>
-  </p>
-  <p>
-    Description: <%= item.description %>
-  </p>
-  <p>
-    Price: <%= number_to_currency(item.price) %>
-  </p>
-  <p>
-    <%= link_to "Edit Item", edit_item_path(item.id) %>
-  </p>
-</div>
-
-<% end %>
-<%= link_to "Add Item", new_item_path %>
+  <% end %>
+  <%= link_to '<i class="fa fa-plus"></i> New Item'.html_safe, new_item_path, class: 'ui blue button ' %>
+  <!-- <div class="ui button "><i class="fa fa-plus"></i> -->
+  </div>
+  </div>
 </div>
