--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,14 +47,27 @@
 
   <body class="<%= controller_name %> <%= action_name %>">
     <%= render 'layouts/nav'%>
-    <div class="ui container">
-      <% flash.each do |name, msg| %>
-        <%= content_tag :div, class: "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable", role: "alert" do %>
-          <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-          <%= msg %>
+
+    <% if params[:action] != "locations" %>
+
+      <div class="ui container">
+        <% flash.each do |name, msg| %>
+          <%= content_tag :div, class: "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable", role: "alert" do %>
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <%= msg %>
+          <% end %>
         <% end %>
-      <% end %>
-      <%= yield %>
-    </div>
+        <%= yield %>
+      </div>
+        <% else %>
+        <% flash.each do |name, msg| %>
+          <%= content_tag :div, class: "alert alert-#{ name == :error ? "danger" : "success" } alert-dismissable", role: "alert" do %>
+            <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+            <%= msg %>
+          <% end %>
+        <% end %>
+        <%= yield %>
+    <% end %>
+
   </body>
 </html>
