modifies js and buttons

--- a/app/views/layouts/_items_form.html.erb
+++ b/app/views/layouts/_items_form.html.erb
@@ -11,6 +11,6 @@
  <% end %>
 
 
-  <%= f.submit "Add Item", class: 'ui standard black button'%>
+  <%= f.submit "Add Item", class: 'ui standard blue button huge'%>
 </div>
 <% end %>
