--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -3,6 +3,8 @@
   <p>
     <%= item.name.capitalize %>
   </p>
+
+  <%= image_tag item.image.url(:large) %>
   <p>
     <%= item.description %>
   </p>
