--- a/app/views/layouts/_business_form.html.erb
+++ b/app/views/layouts/_business_form.html.erb
@@ -12,6 +12,6 @@
   <%= f.password_field :password, placeholder: 'password'  %>
   <%= f.password_field :password_confirmation, placeholder: 'password confirmation'   %>
 
-      	<%=  f.submit "list Business", class:'ui standard black button huge'%>
+      	<%=  f.submit "update info", class:'ui standard black button huge'%>
   </div>
 <% end %>
