fixes data type

--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -8,7 +8,7 @@
       <% if wallet.name %>
       <p><%= wallet.name %></p>
       <% end %>
-      <p><%= wallet.balance %></p>
+      <p><%= wallet.balance * 0.00000001 %></p>
       <div class="row">
         <button class="private_key_button ui primary button large">
           <i class="fa fa-eye"></i>
