adds wallet conditional show price and placeholder name

--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -8,7 +8,7 @@
       <% if wallet.name %>
       <p><%= wallet.name %></p>
       <% end %>
-      <% if wallet.wallet.balance %>
+      <% if wallet.balance %>
       <p><%= wallet.balance * 0.00000001 %></p>
       <% end %>
       <div class="row">
