--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
 
   <body class="<%= controller_name %> <%= action_name %>">
     <%= render 'layouts/nav'%>
-
+    <%= @rates %>
     <% if params[:action] != "locations" %>
 
       <div class="ui container">
