--- a/app/views/static_pages/landing.html.erb
+++ b/app/views/static_pages/landing.html.erb
@@ -9,6 +9,7 @@
       </h1>
       <h2 class="h2 txt">The Platform for business owners to sell locally and get paid immediatly in Bitcoin
         <br>
+        <div class="bitcoin_box"><div class="bitcoinimage bitcoin64x64 animate-spin"></div></div>
         <%#= link_to "Sign up", new_business_path, class: 'ui huge green button block'%>
       <button class='ui huge green button block', id="signupbtn">Sign up</button>
     </h2>
