--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -210,9 +210,6 @@ textarea {
   padding-top: 1vh;
 }
 
-#pub_qrcode{
-
-}
 
 
 
@@ -224,7 +221,7 @@ textarea {
 #landing{
   position: absolute;
   top: 33vh;
-  left: 30vw;
+  left: 32vw;
   width: 40vw;
   height: 30vh;
 }
@@ -332,6 +329,9 @@ input.ui.standard.black.button {
 ********************************/
 .private_key_wrapper {
   background-color: rgba(20,80,40,0.4);
+
+  text-align: center;
+  padding-left: 1vw;
 }
 .hide {
   display:none;
@@ -341,15 +341,53 @@ input.ui.standard.black.button {
 }
 .private_key_wrapper,
 .public_key_wrapper {
+
   box-shadow: 0 10px 20px rgba(0,0,0,0.19);
-  height: 531px;
+  text-align: center;
+  height: 26vh;
+  // height: 30vh;
 }
+
+#pub_qrcode,#priv_qrcode {
+  padding-left: 10vw;
+}
+
+#priv_qrcode{
+  padding-top: 2vh;
+}
+
+
 //
 // .item.ui.inverted.button{
 //   margin-left: 10px;
 // }
 
+
+#pub_qrcode{
+
+
+}
+
+
 #signupbtnm{
   margin-right: 2em;
 
+}
+
+.items_image{
+  float: right;
+  padding-top: 1em;
+
+}
+#business_description{
+    padding-top: 4vh;
+
+}
+
+// #business_btns{
+//   padding-bottom: 4vh;
+// }
+
+a.ui.blue.button.item {
+  margin-left: 25vw;
 }
