adds ajax get for rates

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -396,7 +396,7 @@ a.ui.blue.button.item {
 
 .item.rate{
   left: 8vw;
-  color: rgb(80, 171, 80)!important;
+  color: rgb(80, 171, 80);
   font-weight: 1vw;
     font-style: oblique;
 }
