--- a/app/views/layouts/_items_form.html.erb
+++ b/app/views/layouts/_items_form.html.erb
@@ -28,10 +28,10 @@
   <%= f.submit "Add Item", class: 'ui standard blue button huge'%>
 <% end %>
 
-
+<!--
 <script id="template-upload" type="text/x-tmpl">
 <div class="upload">
   {%=o.name%}
   <div class="progress"><div class="bar" style="width: 0%"></div></div>
 </div>
-</script>
+</script> -->
