--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.0/components/visibility.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.0/components/transition.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.0.0/components/form.js"></script>
-
+    <script <source src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.14.0/jquery.validate.js"></script>
 
 
 
