--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,20 +1,20 @@
-<div class="col-md-8 col-md-offset-1" id="business_description">
+<div class="col-md-10 col-md-offset-1" id="business_description">
   <div clas="row">
     <h1><%= current_business.name %></h1>
     <span></span>
   </div>
 
     <%= current_business.description %>
-    
+
 
   </div>
 
-<div class="col-md-8 col-md-offset-1" id="business_description">
+<div class="col-md-10 col-md-offset-1" id="business_description">
   <div clas="row" id="business_btns">
   <!-- <div class="col-md-12 col-offset-6"> -->
     <%= link_to "Edit Business Info", edit_business_path(current_business.id) %>
 
-      <%= link_to '<i class="fa fa-plus"></i> List Item'.html_safe, new_item_path, class: 'ui blue button item' %>
+      <%= link_to '<i class="fa fa-plus"></i> List Item'.html_safe, new_item_path, class: 'ui blue button item', id: 'list_btn' %>
     <!-- </div> -->
     </div>
   <!-- <h2>What's for Sale</h2> -->
@@ -39,8 +39,10 @@
       wallet: <%= item.item_address%>
     </p>
     <p>
+      <!-- <div class="row"> -->
       <%= link_to '<i class="fa fa-pencil"></i> Edit Item'.html_safe, edit_item_path(item.id), class: 'ui button' %>
       <%= link_to '<i class="fa fa-trash-o"></i> Delete Item'.html_safe, item_path(item.id), :method => 'delete', class: 'ui button' %>
+    <!-- </div> -->
     </p>
 
   </div>
