--- a/app/views/layouts/_modal_signup.html.erb
+++ b/app/views/layouts/_modal_signup.html.erb
@@ -6,7 +6,7 @@
         </h2>
       </div>
     </div>
-    <%= bootstrap_form_for @business  do |f| %>
+    <%= bootstrap_form_for @business do |f| %>
     <div class="row">
       <!-- <div class="messages">
       </div> -->
@@ -50,8 +50,8 @@
 
               <div class="col-md-8 col-md-offset-2">
                 <div class='ui huge black button', id="backbtn2">Back <i class="fa fa-undo"></i></div>
-                <div class='ui huge blue button', id="submit">List Business </div>
-                <%#=  f.submit "list Business", class:'ui huge blue button'%>
+                <!-- <div class='ui huge blue button', id="submit">List Business </div> -->
+                <%=  f.submit "list Business", class:'ui huge blue button'%>
                 <!-- <div class='ui huge blue button', id="nextbtn3">Next <i class="fa fa-arrow-right"></i></div> -->
             </div>
         </div>
