--- a/app/views/wallets/index.html.erb
+++ b/app/views/wallets/index.html.erb
@@ -31,7 +31,7 @@
       <p class="private_key" value='<%= wallet.private_key %>'>
         <%= wallet.private_key %>
       </p>
-      <h4> <b>Do not ever show your private key to anyone!!!</b> </h4>
+      <h4> <b class="warning">Do not ever show your private key to anyone!!!</b> </h4>
       <% end %> <!-- end wallet.private_key if statement -->
     </div>
   </div>
