fixes js issue and updates styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -373,6 +373,7 @@ input.ui.standard.black.button {
 
 #signupbtnm{
   margin-right: 2em;
+  margin-top: 2em;
 
 }
 
@@ -427,4 +428,7 @@ a.ui.blue.button.item {
 
 .warning {
   color: red;
+}
+.ui.container{
+  padding-top: 4vh;
 }
