--- a/app/views/static_pages/locations.html.erb
+++ b/app/views/static_pages/locations.html.erb
@@ -19,7 +19,7 @@
 
   </div>
 </div>
-
+<!--
 <script>
 var initialize
 
@@ -108,4 +108,4 @@ google.maps.event.addDomListener(window, 'load', initialize);
 })
 
 
-</script>
+</script> -->
