--- a/app/views/layouts/_modal_signup.html.erb
+++ b/app/views/layouts/_modal_signup.html.erb
@@ -1,9 +1,11 @@
 <div class="signupdiv" id="sign_up1" style="display: none">
     <div class="col-md-6">
       <div class="row">
+        <div class="col-md-8 col-md-offset-10">
         <h2>
           Sign Up
         </h2>
+      </div>
       </div>
     </div>
     <%= bootstrap_form_for @business do |f| %>
@@ -63,9 +65,11 @@
 <div class="logindiv" id="login" style="display: none">
   <div class="col-md-6">
     <div class="row">
+      <div class="col-md-8 col-md-offset-10">
       <h2>
         Log In
       </h2>
+    </div>
     </div>
   </div>
 
