--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,39 +1,48 @@
-<div class="ui inverted vertical masthead center aligned segment">
-
-  <div class="container">
-    <div class="ui large secondary inverted pointing menu">
-      <a class="toc item">
-        <i class="sidebar icon"></i>
-      </a>
-      <%= link_to "QwikBit", root_path, class: 'item' %>
-      <%= link_to "Qwickbit Locations", locations_path, class: 'item' %>
-
+<nav id="header-nav">
+  <div class="nav-wrapper container">
+    <span class="rate-wrapper">
+      <span class="rate-title">Average</span>
+      <span class="rate"><%= current_rate.average_rate %></span>
+      <span class="rate-title">Coinbase</span>
+      <span class="rate"><%= current_rate.coinbase_rate %></span>
+      <span class="rate-title">Ok Coin</span>
+      <span class="rate"><%= current_rate.okcoin_rate %></span>
+      <span class="rate-title">Bitfinex</span>
+      <span class="rate"><%= current_rate.bitfinex_rate %></span>
+    </span>
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+    <ul class="right hide-on-med-and-down">
+      <li><%= link_to "QwickBit", root_path, class:"nav-logo" %></li>
+      <li><%= link_to "QwickBit Locations", locations_path %></li>
       <% if current_business %>
-      <%= link_to current_business.name, business_path(current_business.id), class: 'item' %>
-      <%= link_to "Wallets", wallets_path, class: 'item' %>
-      <%= link_to "Add Items", new_item_path, class: 'item' %>
-      <div class="right item">
-      <%= link_to "Log out", logout_path, method: :delete, class: 'item, ui inverted button' %>
-      </div>
+      <li>
+        <a href="#" class="dropdown-button" data-activates="profile-dropdown">
+        <%= current_business.name %><i class="material-icons right">arrow_drop_down</i>
+        </a>
+      </li>
+      <ul id="profile-dropdown" class="dropdown-content">
+        <li><%= link_to "Profile", business_path(current_business.id) %></li>
+        <li><%= link_to "Wallets", wallets_path %></li>
+        <li><%= link_to "Add Items", new_item_path %></li>
+        <li><%= link_to "Log out", logout_path, method: :delete %></li>
+      </ul>
       <% else %>
-      <div class="right item">
-        <%#= link_to "Sign up", new_business_path, class: 'item, ui inverted button' %>
-        <button class='item ui inverted button', id="signupbtnm">Sign up</button>
-        <!-- <button class="item ui inverted button rbtn" id="loginbtn">Sign Up</button> -->
-        <!-- &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp -->
-        <%#= link_to "Log in", login_path, class: 'item, ui inverted button rbtn' %>
-        <button class="item ui inverted button" id="loginbtn">Log In</button>
-      </div>
+      <li><%= link_to "Sign up", new_business_path %></li>
+      <li><%= link_to "Log in", login_path %></li>
       <% end %>
-      <div class="item rate"><%= current_rate.average_rate %>
-      <br> Average</div>
-      <div class="item rate"><%= current_rate.coinbase_rate %>
-      <br> Coinbase</div>
-      <div class="item rate"><%= current_rate.okcoin_rate %>
-        <br> Ok Coin</div>
-        <div class="item rate"><%= current_rate.bitfinex_rate %>
-          <br> bitfinex</div>
-    </div>
+    </ul>
+    <ul class="side-nav" id="mobile-demo">
+      <li><%= link_to "QwickBit", root_path, class:"nav-logo" %></li>
+      <li><%= link_to "QwickBit Locations", locations_path %></li>
+      <% if current_business %>
+      <li><%= link_to current_business.name, business_path(current_business.id) %></li>
+      <li><%= link_to "Wallets", wallets_path %></li>
+      <li><%= link_to "Add Items", new_item_path %></li>
+      <li><%= link_to "Log out", logout_path, method: :delete %></li>
+      <% else %>
+      <li><%= link_to "Sign up", new_business_path %></li>
+      <li><%= link_to "Log in", login_path %></li>
+      <% end %>
+    </ul>
   </div>
-
-</div>
+</nav>
